--- a/src/main/resources/templates/orders/create-order.html
+++ b/src/main/resources/templates/orders/create-order.html
@@ -64,6 +64,7 @@
                      th:value="${userDetails != null ? userDetails.phone : ''}"
                      required
                      pattern="\+?\d{10,13}"
+                     maxlength="10"
                      title="Введіть коректний номер телефону">
             </div>
 
