--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1034,6 +1034,7 @@ select:focus {
   height: 330px;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
 }
 
 .buy-button {
