--- a/src/main/resources/templates/about-contact/about.html
+++ b/src/main/resources/templates/about-contact/about.html
@@ -20,7 +20,7 @@
       <ul>
         <li><strong>Гриців Іван</strong> (Начальник)</li>
         <li><strong>Грабівчук Іван</strong> (Фронтенд частина)</li>
-        <li><strong>Данилюк Олександр</strong> (Реалізація логіки кошика та замовлення товарів)</li>
+        <li><strong>Данилюк Олександр</strong> (Чуть бекенд Чуть фронтенд)</li>
         <li><strong>Калин Роман</strong> (Дизайнер)</li>
         <li><strong>Костюк Іван</strong> (Черлідер)</li>
         <li><strong>Головко Володимир</strong> (<em>Хто це?</em>)</li>
