--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+<html lang="ua" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head}">
 </head>
 <body>
-<main class="container my-4 text-center">
-  <div class="py-5">
-    <h1 class="display-1">400</h1>
-    <h2 class="lead">Неправильний запит</h2>
-    <p class="lead">Ваш запит був неправильним. Спробуйте оновити сторінку або повернутися пізніше.</p>
-    <a th:href="@{/}" class="btn btn-primary">На головну</a>
-  </div>
-</main>
+<div th:replace="~{fragments/header :: header}"></div>
+<div class="page-wrapper">
+  <div class="cityscape"></div>
+  <div class="cityscape-revers"></div>
+
+  <main class="content">
+    <div class="py-5 text-center">
+      <h1 class="display-1 text-black">400</h1>
+      <h2 class="text-black">Невірний запит</h2>
+      <p class="lead text-black">Ваш запит не може бути оброблений через помилку в синтаксисі або форматі.</p>
+      <div class="gif-container mb-4">
+        <img src="/images/400.gif" alt="400 Error GIF" class="error-gif" style="width: 400px">
+      </div>
+      <a th:href="@{/}" class="btn btn-dark">На головну</a>
+    </div>
+  </main>
+  <footer th:replace="~{fragments/footer :: footer}" class="mt-auto"></footer>
+</div>
 </body>
 </html>
