--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" class="h-full">
-<head th:replace="~{fragments/head :: head}">
-  <meta charset="UTF-8">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-</head>
+<head th:replace="~{fragments/head :: head}"></head>
+<div th:replace="~{fragments/header :: header}"></div>
 <body class="bg-gray-100 flex flex-col h-full m-0">
-<header th:replace="~{fragments/header :: header}"></header>
 <div class="page-wrapper">
   <div class="background-wrapper">
     <div class="cityscape"></div>
@@ -13,17 +10,28 @@
   </div>
   <main class="content mt-5 flex-grow">
     <div class="container mx-auto px-4">
+      <!-- Not Authenticated Message -->
+      <div th:unless="${isAuthenticated}" class="cart-container bg-white p-6 rounded-lg shadow-md text-center">
+        <h2 class="text-2xl font-bold mb-4">Кошик замовлень</h2>
+        <p class="empty-cart-message text-gray-700 mb-4 text-xl">Щоб переглянути товари в кошику необхідно увійти</p>
+        <div class="flex justify-center gap-4">
+          <a href="/auth/login" class="checkout-btn bg-blue-500 px-6 py-2 rounded">
+            Увійти
+          </a>
+        </div>
+      </div>
+
       <!-- Admin Check -->
-      <div th:if="${session.user != null and session.user.role != null and session.user.role.toString() == 'ADMIN'}"
+      <div th:if="${isAuthenticated and session.user.role.toString() == 'ADMIN'}"
            class="cart-container bg-white p-6 rounded-lg shadow-md text-center">
         <p class="empty-cart-message text-gray-700 mb-4">Адміністратори не можуть використовувати кошик. Будь ласка,
           використовуйте звичайний обліковий запис для покупок.</p>
-        <a href="/" class="checkout-btn bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Повернутися на
+        <a href="/" class="checkout-btn bg-blue-500 px-4 py-2 rounded">Повернутися на
           головну</a>
       </div>
 
       <!-- User Cart -->
-      <div th:if="${session.user != null and session.user.role != null and session.user.role.toString() == 'USER'}"
+      <div th:if="${isAuthenticated and session.user.role.toString() == 'USER'}"
            class="cart-container bg-white p-6 rounded-lg shadow-md">
 
         <!-- Error Messages -->
@@ -37,7 +45,7 @@
         <!-- Empty Cart -->
         <div th:if="${cart.items.isEmpty()}" class="empty-cart text-center">
           <p class="text-black mb-4" style="font-size: xx-large">Ваш кошик порожній</p>
-          <a href="/" class="btn btn-outline-dark px-4 py-2 rounded hover:bg-blue-600">Продовжити
+          <a href="/" class="checkout-btn bg-blue-500 px-4 py-2 rounded">Продовжити
             покупки</a>
         </div>
 
