--- a/src/main/resources/templates/orders/details.html
+++ b/src/main/resources/templates/orders/details.html
@@ -49,7 +49,7 @@
                     th:selected="${status == order.status}">
             </option>
           </select>
-          <button type="submit">Оновити статус</button>
+          <button type="submit" style="margin-top: 12px">Оновити статус</button>
         </form>
       </div>
 
@@ -58,7 +58,7 @@
         <a th:href="@{/orders/{id}/download-invoice(id=${order.id})}"
            class="btn-download"
            target="_blank"
-           th:if="${order.status.name() == 'PAID' || order.status.name() == 'DELIVERED' || order.status.name() == 'COMPLETED'}">
+           th:if="${order.status.name() != 'NEW' && order.status.name() != 'PROCESSING' && order.status.name() != 'CANCELED'}">
           Завантажити pdf замовлення
         </a>
 
