add password change

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -33,6 +33,7 @@
 
       <div class="register-link">
         <p class="mb-0">Немає акаунту? <a th:href="@{/auth/register}">Зареєструватися</a></p>
+        <p class="mb-0"><a th:href="@{/password/forgot}" style="font-weight: normal;">Забули пароль?</a></p>
       </div>
   </div>
   </div>
