--- a/src/main/resources/templates/password/success.html
+++ b/src/main/resources/templates/password/success.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <title>Успішна зміна паролю</title>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-body text-center">
-          <h3 class="card-title mb-4">Пароль успішно змінено</h3>
+<head th:replace="~{fragments/head :: head}"></head>
+<body>
+<div th:replace="~{fragments/header :: header}"></div>
 
-          <div class="alert alert-success" th:if="${message}" th:text="${message}"></div>
+<div class="page-wrapper">
+  <div class="background-wrapper">
+    <div class="cityscape"></div>
+    <div class="cityscape-revers"></div>
+  </div>
 
-          <p>Тепер ви можете увійти з використанням нового паролю.</p>
+  <div class="container">
+    <div class="login-container">
+      <h3>Пароль успішно змінено</h3>
 
-          <div class="mt-4">
-            <a th:href="@{/auth/login}" class="btn btn-primary">Перейти до входу</a>
-          </div>
-        </div>
+      <div class="alert alert-success" th:if="${message}" th:text="${message}"></div>
+
+      <p class="text-center">Тепер ви можете увійти з використанням нового паролю.</p>
+
+      <div class="mt-4">
+        <a th:href="@{/auth/login}" class="btn btn-login">Перейти до входу</a>
       </div>
     </div>
   </div>
 </div>
+
+<div th:replace="~{fragments/footer :: footer}"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
